force-app/main/default/objects/copado__User_Story__c/fields/Backup_Jira_Key__c.field-meta.xml
<CustomField>
    <fullName>Backup_Jira_Key__c</fullName>
    <label>Backup Jira Key</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>