force-app/main/default/objects/copado__User_Story__c/fields/copado__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>