force-app/main/default/objects/copado__User_Story__c/fields/Deployed_To__c.field-meta.xml
<CustomField>
    <fullName>Deployed_To__c</fullName>
    <label>Deployed To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IntgDev</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
                <label>PreProd</label>
            </value>
            <value>
                <fullName>BAUDEV</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>CI1</fullName>
                <isActive>false</isActive>
                <label>CI1</label>
            </value>
            <value>
                <fullName>DataOrg</fullName>
                <isActive>false</isActive>
                <label>DataOrg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>