force-app/main/default/objects/copado__User_Story__c/fields/Environment_api_name__c.field-meta.xml
<CustomField>
    <fullName>Environment_api_name__c</fullName>
    <formula>copado__Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Formula</label>
    <type>Text</type>
</CustomField>