force-app/main/default/objects/copado__User_Story__c/fields/For_Environment__c.field-meta.xml
<CustomField>
    <fullName>For_Environment__c</fullName>
    <label>For UAT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>