force-app/main/default/objects/copado__User_Story__c/fields/For_PROD__c.field-meta.xml
<CustomField>
    <fullName>For_PROD__c</fullName>
    <label>For PROD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>