force-app/main/default/objects/copado__User_Story__c/fields/Is_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Is_Deployed__c</fullName>
    <description>stores the environment once it is deployed to QA</description>
    <label>Is Deployed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>