force-app/main/default/objects/copado__User_Story__c/fields/Merge_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Merge_Ordering__c</fullName>
    <label>Merge Ordering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>