force-app/main/default/objects/copado__User_Story__c/fields/Next_Environment__c.field-meta.xml
<CustomField>
    <fullName>Next_Environment__c</fullName>
    <label>Next Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>