force-app/main/default/objects/copado__User_Story__c/fields/Open_In_Jira__c.field-meta.xml
<CustomField>
    <fullName>Open_In_Jira__c</fullName>
    <formula>HYPERLINK(&quot;https://stwater-cms.atlassian.net/browse/&quot;+Jira_Key__c,Jira_Key__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open In Jira</label>
    <type>Text</type>
</CustomField>