force-app/main/default/objects/copado__User_Story__c/fields/PDS_Destructive__c.field-meta.xml
<CustomField>
    <fullName>PDS_Destructive__c</fullName>
    <label>PDS/Destructive</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>PDS</fullName>
                <label>Post PDS</label>
            </value>
            <value>
                <fullName>Pre PDS</fullName>
            </value>
            <value>
                <fullName>Pre &amp; Post Pds</fullName>
                <label>Pre &amp; Post PDS</label>
            </value>
            <value>
                <fullName>PDS Only</fullName>
            </value>
            <value>
                <fullName>Pre PDS Only</fullName>
            </value>
            <value>
                <fullName>Destructive</fullName>
            </value>
            <value>
                <fullName>Pre Destructive</fullName>
            </value>
            <value>
                <fullName>Data Task</fullName>
                <label>Post Data Task</label>
            </value>
            <value>
                <fullName>Pre Data Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>