force-app/main/default/objects/copado__User_Story__c/fields/Stories_deployed_along_with__c.field-meta.xml
<CustomField>
    <fullName>Stories_deployed_along_with__c</fullName>
    <description>Use this field if developer is deploying multiple stories through one story</description>
    <label>Stories deployed along with</label>
    <type>TextArea</type>
</CustomField>