force-app/main/default/objects/copado__User_Story__c/listViews/BAU_dev_stories.listView-meta.xml
<ListView>
    <fullName>BAU_dev_stories</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>copado__Latest_Commit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>BAUDEV</value>
    </filters>
    <filters>
        <field>For_Environment__c</field>
        <operation>notEqual</operation>
        <value>SIT_30_2102</value>
    </filters>
    <filters>
        <field>Jira_Key__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Next_Environment__c</field>
        <operation>notEqual</operation>
        <value>SIT_30_2102</value>
    </filters>
    <label>BAU dev stories</label>
</ListView>