force-app/main/default/objects/copado__User_Story__c/listViews/BAUDEV_1_060225.listView-meta.xml
<ListView>
    <fullName>BAUDEV_1_060225</fullName>
    <columns>NAME</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Environment__c</field>
        <operation>contains</operation>
        <value>SIT_16,SIT_17,SIT_18,SIT_19,SIT_20,SIT_21,SIT_22,SIT_23,SIT_24,SIT_25,SIT_26,SIT_27,SIT_28,SIT_29</value>
    </filters>
    <filters>
        <field>copado__Environment__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>BAUDEV_1_060225</label>
</ListView>