force-app/main/default/objects/copado__User_Story__c/listViews/Blank_Next_Environment.listView-meta.xml
<ListView>
    <fullName>Blank_Next_Environment</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>QA</value>
    </filters>
    <filters>
        <field>Next_Environment__c</field>
        <operation>notEqual</operation>
        <value>FOR SIT,SIT_Bundle</value>
    </filters>
    <filters>
        <field>Next_Environment__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>copado__Sprint__c</field>
        <operation>notEqual</operation>
        <value>24.1 SFC Value Sprint 5,24.1 SFC Value Sprint 6,24.1 SFI sprint 5,24.1 SFI sprint 6,24.2 SFC Value Sprint 1,24.2 SFI sprint 1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>US-0000834,US-0001082,US-0001083,US-0001413</value>
    </filters>
    <label>Blank Next Environment</label>
</ListView>