force-app/main/default/objects/copado__User_Story__c/listViews/Cloned_SFL_Bugs.listView-meta.xml
<ListView>
    <fullName>Cloned_SFL_Bugs</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>Deployed_To__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Last_Promotion_Date__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>For_Environment__c</columns>
    <columns>copado__Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Jira_Key__c</field>
        <operation>contains</operation>
        <value>clone</value>
    </filters>
    <label>Cloned SFL Bugs</label>
</ListView>