force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>copado__Latest_Commit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Base_Branch__c</field>
        <operation>equals</operation>
        <value>COP_newfsmintgqa1</value>
    </filters>
    <label>All</label>
</ListView>