force-app/main/default/objects/copado__User_Story__c/listViews/Copy_of_PROD_23_030625.listView-meta.xml
<ListView>
    <fullName>Copy_of_PROD_23_030625</fullName>
    <columns>NAME</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>Stories_deployed_along_with__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>For_PROD__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>copado__Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>For_PROD__c</field>
        <operation>equals</operation>
        <value>PROD 23 (030625)</value>
    </filters>
    <label>PROD 23 (030625)</label>
</ListView>