force-app/main/default/objects/copado__User_Story__c/listViews/Copy_of_SIT_17_0711_24_3_3_NOT_FOR_UAT.listView-meta.xml
<ListView>
    <fullName>Copy_of_SIT_17_0711_24_3_3_NOT_FOR_UAT</fullName>
    <columns>NAME</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>Stories_deployed_along_with__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Environment__c</field>
        <operation>contains</operation>
        <value>SIT_17_0711</value>
    </filters>
    <label>SIT_17_0711 (24.3.3) NOT FOR UAT</label>
</ListView>