force-app/main/default/objects/copado__User_Story__c/listViews/Copy_of_SIT_5_1807_24_1_5_24_1_6.listView-meta.xml
<ListView>
    <fullName>Copy_of_SIT_5_1807_24_1_5_24_1_6</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>Stories_deployed_along_with__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Environment__c</field>
        <operation>equals</operation>
        <value>SIT_5_1807</value>
    </filters>
    <label>Copy of SIT_5_1807 (24.1.5 &amp; 24.1.6)</label>
</ListView>