force-app/main/default/objects/copado__User_Story__c/listViews/Deployed_to_QA_S1_S2_S3.listView-meta.xml
<ListView>
    <fullName>Deployed_to_QA_S1_S2_S3</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>QA</value>
    </filters>
    <filters>
        <field>Next_Environment__c</field>
        <operation>notEqual</operation>
        <value>FOR SIT,SIT_Bundle</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>US-0001640,US-0001494,US-0001497,US-0001641,US-0000834,US-0001082,US-0001083</value>
    </filters>
    <label>Extra List View</label>
</ListView>