force-app/main/default/objects/copado__User_Story__c/listViews/Deployed_to_SIT.listView-meta.xml
<ListView>
    <fullName>Deployed_to_SIT</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>For_Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>SIT</value>
    </filters>
    <label>Deployed to SIT</label>
</ListView>