force-app/main/default/objects/copado__User_Story__c/listViews/Emergency_Prod_33_030725.listView-meta.xml
<ListView>
    <fullName>Emergency_Prod_33_030725</fullName>
    <columns>NAME</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>Stories_deployed_along_with__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>For_PROD__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Deployed_To__c</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>copado__Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>For_PROD__c</field>
        <operation>equals</operation>
        <value>PROD 33 (030725)</value>
    </filters>
    <label>Emergency Prod 33 (030725)</label>
</ListView>