force-app/main/default/objects/copado__User_Story__c/listViews/For_Training_Bundle_Till_S5.listView-meta.xml
<ListView>
    <fullName>For_Training_Bundle_Till_S5</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>Deployed_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Environment__c</field>
        <operation>equals</operation>
        <value>PKG1_27.03</value>
    </filters>
    <label>Training Bundle Till S5 PKG1</label>
</ListView>