force-app/main/default/objects/copado__User_Story__c/listViews/For_Training_Deployment.listView-meta.xml
<ListView>
    <fullName>For_Training_Deployment</fullName>
    <columns>NAME</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Base_Branch__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PDS_Destructive__c</columns>
    <columns>Next_Environment__c</columns>
    <columns>Deployed_To__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>QA</value>
    </filters>
    <filters>
        <field>Jira_Key__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>copado__Sprint__c</field>
        <operation>notContain</operation>
        <value>24</value>
    </filters>
    <label>For Training Deployment</label>
</ListView>